# rayon-array-add-benchmarks

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
