[package]
name = "rayon-array-add-benchmarks"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "bench"
harness = false
